# clubdarn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  release.toml
clubdarn/: Cargo.toml
clubdarn-cli/: Cargo.toml
clubdarn-cli/src/: app.rs  args.rs  error.rs  main.rs
clubdarn-cli/src/subcommand/: artist.rs  category.rs  mod.rs  series.rs  song.rs
clubdarn-server/: Cargo.toml  release.toml
clubdarn-server/src/: cors.rs  elastic.rs  error.rs  main.rs  responders.rs
clubdarn/src/: category.rs  client.rs  error.rs  lib.rs  model.rs  util.rs
clubdarn/src/protocol/: api.rs  exist.rs  mod.rs  recommend.rs  search.rs
clubdarn/tests/: integration.rs
examples/: search.rs
src/: category.rs  client.rs  lib.rs  main.rs  model.rs  models.rs  protocol.rs  request_builder.rs  util.rs
src/protocol/: api.rs  categories.rs  exist.rs  mod.rs  recommend.rs  search.rs
tests/: integration.rs
