[package]
name = "clubdarn-cli"
version = "0.1.0"
description = "Command line interface for ClubDAM's karaoke search API"
authors = ["Walfie <walfington@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/walfie/clubdarn"
repository = "https://github.com/walfie/clubdarn"

[dependencies]
clippy = {version = "*", optional = true}
clubdarn = { version = "0.1", path = "../clubdarn" }
error-chain = "0.9"
serde = "0.9"
serde_json = "0.9"
clap = "2.20"

[features]
default = []

[[bin]]
name = "clubdarn"

