[package]
name = "clubdarn"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/walfie/clubdarn"
repository = "https://github.com/walfie/clubdarn"

[dependencies]
clippy = {version = "*", optional = true}
error-chain = "0.9"
reqwest = "0.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[features]
default = []

